# PyCGM

./: .gitignore  README.md  pyproject.toml
examples/: first_order_positions.json
pycgm/: __init__.py  calibration.py  main.py  phase1024.txt
src/pycgm/: .gitignore  calibration.py  main.py
tests/: test_pycgm.py
