[project]
name = "pycgm"

version = "0.1.1"

authors = [
  { name="Andy Zhang", email="andyletzhang@uchicago.edu" },
]

description = "Interferogram processor for quantitative phase microscopy. Description last edited 20250315"

license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "scikit-image",
    "matplotlib"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 130

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true